2007-02-08  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/UnpackModuleTask.java: 
	* projects/core/schema/moduledescriptor200702.xsd: 
	* skel/build-skel.xml: 
	Adding support for resource data in JAR libraries. The resource data will
	be copied to the projects/modules/<module-x> directory if a suitable
	deployment descriptor is present in the JAR archive.

2007-02-08  Martin Leidig  <mleidig@schlund.de>

	* build.xml: Removed exclusion of the de.skelexamples package
	from compiling (it just confuses Eclipse, which sometimes doesn't
	compile the classes and shows errors). Added exclusion of the
	packages de.schlund.pfixcore.example and de.skelexamples to the
	jar file creation target (cause they're not needed/wanted here)

2007-02-08  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/workflow/Context.java (resetUICache): new method.
	* src/de/schlund/pfixcore/workflow/ContextImpl.java (resetUICache): implement it.
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java (getDocument): call context.resetUICache()
	when handling submitted data.
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java (handleRequest): 
	- new feature: implement a possibility to have a running timestamp in the session (and be able to reset it to the current time) 
	that is used to decide if a matching ETag results in the sending a NOT_MODIFIED header.
	- new feature: also redirect whenever the incoming page from the request isn't the page used for the UI.
	This will eliminate misleading pages visible in the URL (and wrong reload behavior) when moving ahead in a pageflow.
	(resetUICache): new method (see above).
	* src/de/schlund/pfixxml/ResultDocument.java (ResultDocument): use the timestamp from the 
	SPDocument for consistency
	* src/de/schlund/pfixxml/SPDocument.java: change all occurrences of sslredirect -> redirect
	because we not only do this for the SSL case anymore